--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -7,3 +7,7 @@ and open the template in the editor.
     Created on : 05 21, 14, 7:02:47 PM
     Author     : OJT
 */
+
+a {
+    color: #ff7f00;
+}
