--- a/web/bootstrap/assets/css/bootstrap.css
+++ b/web/bootstrap/assets/css/bootstrap.css
@@ -4803,9 +4803,10 @@ input[type="submit"].btn.btn-mini {
     background-image: -o-linear-gradient(top, #222222, #111111);
     background-image: linear-gradient(to bottom, #222222, #111111);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff111111', GradientType=0);
+    border-color: #252525;
     */
     background-repeat: repeat-x;
-    border-color: #252525;
+    border-bottom: 5px solid #ff7f00;
 }
 
 .navbar-inverse .brand,
