--- a/web/css/header.css
+++ b/web/css/header.css
@@ -29,10 +29,33 @@ img.mobile-logo {
 /* The heading hero
 */
 .heading-hero {
-    background-color: #000;
+    background: url(../images/hero-cover.png) no-repeat #46b8da top / cover;
     box-sizing: border-box;
+    padding-left: 0px;
+    padding-bottom: 3%;
 }
-
+.heading-promotions {
+    background-color: rgba(0,0,0,0.7);
+    box-sizing: border-box;
+    color: #fff;
+    padding: 30px;
+}
+.heading-promotions-mini {
+    margin-top: 3%;
+    margin-bottom: 5%;
+}
+.heading-hero-caption {
+    background-color: rgba(0,0,0,0.2);
+    color: #fff;
+    font-size: 120%;
+    font-family: cursive;
+    font-style: italic;
+    margin-top: 5%;
+    padding: 1% 5%;
+}
+li.dropdown:hover > ul.dropdown-menu {
+    display: block;
+}
 
 
 @media screen and (max-width: 1199px) {
