--- a/web/css/llv-styles.css
+++ b/web/css/llv-styles.css
@@ -8,11 +8,11 @@ and open the template in the editor.
     Author     : OJT
 */
 
-<<<<<<< HEAD
 .orange-color
 {
     color: #f77f00;
-=======
+}
+
 .section-header {
     
 }
@@ -26,5 +26,4 @@ and open the template in the editor.
 .section-title-line {
     background: url(../images/line-ff7f00.png) no-repeat left center / cover;
     content: none;
->>>>>>> f191ebf5e562745351e08916397a974603f44f56
 }
